Name:                happstack-ella
Version:             0.1
Synopsis:            Small Sinatra-like wrapper for happstack-lite
Description:         Small Sinatra-like wrapper for happstack-lite
Homepage:            http://github.com/seanhess/happstack-ella
License:             BSD3
License-file:        LICENSE
Author:              Sean Hess
Maintainer:          seanhess@gmail.com

Category:            Web
Build-type:          Simple

Cabal-version:       >=1.2

Library
  Exposed-modules:   Happstack.Ella
  hs-source-dirs:    src/
  Build-depends:     base >= 3 && < 5, happstack-lite, split, mtl, transformers, bytestring, happstack-server
  
